# QuarterCar

./: .gitignore  CMakeLists.txt  Car.cpp  Car.hpp  Car_noInterfaces.cpp  Damper.cpp  Damper.hpp  ModelBuilder.cpp  ModelBuilder.hpp  QuarterCar.cpp  Road.cpp  Road.hpp  Simulation.cpp  Simulation.hpp  Spring.cpp  Spring.hpp  functionalSimulation.cpp  main.cpp
